# provisioning-model

./: .gitignore  README.txt  pyproject.toml  setup.py  viz_regressions_v3.ipynb
functions/: best_subset.py  create_panel_dataset.py  cross_validation.py  exploratory_analysis.py
model/: decision_making.py  initial_conditions.py
model/dissipation/: accumulation.py  distribution.py  exchange.py  need_satisfaction.py  output.py  waste.py
model/extraction/: energy_consumption.py  energy_use.py  exchange_incoming.py  input.py  resource_consumption.py
model/resource_base/: base.py  capital.py  energy.py  other.py  people.py
model/software_governance/: communication.py  foreign_relations.py  inequality.py  state.py
model/transformation/: commodity_production.py  decision_making.py  economic_layers.py  economic_properties.py  economic_sectors.py  efficiency.py  layers.py  sectors.py  social_services.py  structure.py
notebooks/: create_panel_dataset.py  model.ipynb  provisioning.ipynb
provisioning_model/data/: un_mat_flows.csv  wdi_outcomes.csv  wdi_realms.csv
provisioning_model/data/biophysical/: env_ac_pefa04_linear_description.txt  exiobase.txt  exiobase_energy.csv  iea_description.txt  iea_indicators_description.txt
provisioning_model/functions/: back_transformations.py  create_panel_dataset.py  exploratory_analysis.py  pooled_ols.py  resource_flow.py
provisioning_model/model/: general.py
provisioning_model/notebooks/: exploratory.ipynb  foundational.ipynb  model.ipynb  provisioning.ipynb
provisioning_model/utils/: image.py
utils/: image.py
(+29 files in other folders)
