[project]
name = "provisioning_model"
version = "0.0.1"
authors = [
    { name = "Valentin Erokhin", email = "a2svior@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build]
include = ["provisioning_model/**/*"]
exclude = ["notebooks/*", "data/*"]

[project.urls]
"Homepage" = "https://github.com/saviorand/provisioning-model"
"Bug Tracker" = "https://github.com/saviorand/provisioning-model/issues"